objects/ContractLineItem__c.object
<CustomObject>
    <description>This object defines the conditions for the contract object.
Robin S. 15.10.2019</description>
    <label>Vertragskondition</label>
    <nameField>
        <displayFormat>VK-{0000000}</displayFormat>
        <label>ContractLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vertragskonditionen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Unit__c</fullName>
        <defaultValue>&quot;EUR / h&quot;</defaultValue>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR / h</fullName>
                </value>
                <value>
                    <fullName>EUR (Pauschal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Round</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>x, yy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ContractLineItems</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Contract Line Items are the child record from a contract object.
Robin S. 15.10.2019</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>ContractLineItems</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Dienstart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aktivstunden</fullName>
                </value>
                <value>
                    <fullName>Arbeitsmittelpauschale</fullName>
                </value>
                <value>
                    <fullName>Bereitschaftdienst aktiv</fullName>
                </value>
                <value>
                    <fullName>Bereitschaftsdienst</fullName>
                </value>
                <value>
                    <fullName>Bereitschaftsdienst passiv</fullName>
                </value>
                <value>
                    <fullName>Fahrtkostenpauschale</fullName>
                </value>
                <value>
                    <fullName>Feiertagsdienst</fullName>
                </value>
                <value>
                    <fullName>Feiertagszuschlag</fullName>
                </value>
                <value>
                    <fullName>Freitext</fullName>
                </value>
                <value>
                    <fullName>Nachtdienst</fullName>
                </value>
                <value>
                    <fullName>Nachtzuschlag</fullName>
                </value>
                <value>
                    <fullName>Regeldienst</fullName>
                </value>
                <value>
                    <fullName>Rufbereitschaft exkl. Aktivstunden</fullName>
                </value>
                <value>
                    <fullName>Rufbereitschaft inkl. Aktivstunden</fullName>
                </value>
                <value>
                    <fullName>Rufbereitschaft zzgl. Aktivstunden</fullName>
                </value>
                <value>
                    <fullName>Rufdienst aktiv</fullName>
                </value>
                <value>
                    <fullName>Rufdienst passiv</fullName>
                </value>
                <value>
                    <fullName>Samstagszuschlag</fullName>
                </value>
                <value>
                    <fullName>Sonntagszuschlag</fullName>
                </value>
                <value>
                    <fullName>Spesen</fullName>
                </value>
                <value>
                    <fullName>Tagdienst</fullName>
                </value>
                <value>
                    <fullName>Tagesaufwandspauschale</fullName>
                </value>
                <value>
                    <fullName>Unterkunftspauschale</fullName>
                </value>
                <value>
                    <fullName>Wochenendzuschlag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeePrice__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Employee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HospitalPrice__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Hospital</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PorkyExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PorkyExternalID is used for the porky sync.
Robin S. 21.11.2019</description>
        <externalId>true</externalId>
        <label>Porky External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_Item_Description__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 15.10.2019</description>
        <label>Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>